# cipherant

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: design.md  development.md
src/: lib.rs  main.rs
src/agent/: builder.rs  mod.rs  pdf_read.rs  web_fetch.rs  web_search.rs
src/cli/: history.rs  mod.rs  render.rs  repl.rs
src/collectors/: mod.rs  pdf.rs  robots.rs  web.rs
src/llm/: client.rs  mod.rs  rig_client.rs
