[package]
name = "cipherant"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
rustyline = "15.0"

# Async runtime
tokio = { version = "1.41", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# HTML parsing
scraper = "0.20"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# LLM integration
rig-core = "0.28"

# Load .env file
dotenvy = "0.15"

# Web search (using reqwest to call Tavily API directly)
